objects/Construction_Project__c.object
<CustomObject>
    <fields>
        <fullName>Proposal_Amount__c</fullName>
        <description>Estimated cost provided by Installer</description>
        <label>Installer Proposed Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RC_GLA_SF__c</fullName>
        <label>RC GLA-SF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RC_HHI__c</fullName>
        <label>RC HHI $$</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RC_Hours_Open__c</fullName>
        <label>RC # Hours Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RC_Location_Description__c</fullName>
        <label>RC Location Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RC_Monthly_Traffic__c</fullName>
        <label>RC Monthly Traffic</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RC_Name__c</fullName>
        <label>RC Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RC_Parking__c</fullName>
        <label>RC # Parking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RC_Pass_through__c</fullName>
        <label>RC % Pass-through</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RC_Sales_per_SF__c</fullName>
        <label>RC Sales (per SF)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RC_Site_Type__c</fullName>
        <label>RC Site Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Neighborhood</fullName>
                </value>
                <value>
                    <fullName>Regional-A</fullName>
                </value>
                <value>
                    <fullName>Regional-B</fullName>
                </value>
                <value>
                    <fullName>Super-Regional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RC_of_Chargers__c</fullName>
        <label>RC # of Chargers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RC_of_Stores__c</fullName>
        <label>RC # of Stores</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_ADA_Accessibility__c</fullName>
        <label>Required ADA Accessibility</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requires_On_site_Advertising__c</fullName>
        <label>Requires On-site Advertising</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Select One</fullName>
                    <default>true</default>
                    <label>Select One</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SEM_Email__c</fullName>
        <label>SEM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SEM_Phone__c</fullName>
        <label>SEM Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SEM_Site_Electrical_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SEM Site Electrical Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Construction Projects (SEM Site Electrical Manager)</relationshipLabel>
        <relationshipName>Construction_Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFM_Email__c</fullName>
        <label>SFM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SFM_Phone__c</fullName>
        <label>SFM Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SFM_Site_Facilities_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SFM Site Facilities Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Construction Projects</relationshipLabel>
        <relationshipName>Construction_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SL_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SL Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Construction Projects (SL Name)</relationshipLabel>
        <relationshipName>Construction_Projects3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Construction Projects</relationshipLabel>
        <relationshipName>Construction_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_per_SF__c</fullName>
        <label>Sales per SF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_Site_Grade__c</fullName>
        <label>Score (Site Grade)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3.0</fullName>
                </value>
                <value>
                    <fullName>2.75</fullName>
                </value>
                <value>
                    <fullName>2.5</fullName>
                </value>
                <value>
                    <fullName>2.25</fullName>
                </value>
                <value>
                    <fullName>2.0</fullName>
                </value>
                <value>
                    <fullName>1.75</fullName>
                </value>
                <value>
                    <fullName>1.5</fullName>
                </value>
                <value>
                    <fullName>1.25</fullName>
                </value>
                <value>
                    <fullName>1.0</fullName>
                </value>
                <value>
                    <fullName>0.75</fullName>
                </value>
                <value>
                    <fullName>0.50</fullName>
                </value>
                <value>
                    <fullName>0.25</fullName>
                </value>
                <value>
                    <fullName>0.0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sign_Permit_Code__c</fullName>
        <label>Sign. Permit Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sign_Permit_Description__c</fullName>
        <label>Sign. Permit Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sign_Permit_Type__c</fullName>
        <label>Sign Permit Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signage_Permit_Req__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signage Permit Req.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_Account_Billing_Address__c</fullName>
        <formula>Primary_Account__r.BillingStreet &amp; BR() 
&amp; Primary_Account__r.BillingCity &amp; &quot;, &quot; &amp; Primary_Account__r.BillingState &amp; &quot; &quot; &amp; Primary_Account__r.BillingPostalCode &amp;BR() 
&amp; Primary_Account__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site Account Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Account_Shipping_Address__c</fullName>
        <formula>Primary_Account__r.ShippingStreet &amp; BR() 
&amp; Primary_Account__r.ShippingCity &amp; &quot;, &quot; &amp; Primary_Account__r.ShippingState &amp; &quot; &quot; &amp; Primary_Account__r.ShippingPostalCode &amp;BR() 
&amp; Primary_Account__r.ShippingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site Account Shipping Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Address__c</fullName>
        <label>Site Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_PM_Company__c</fullName>
        <label>Site PM Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Sales_Rep__c</fullName>
        <formula>Biz_Dev_Opportunity__r.Owner.FirstName &amp; &quot; &quot; &amp; Biz_Dev_Opportunity__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site Sales Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Surface_Material__c</fullName>
        <label>Site Surface Material</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asphalt</fullName>
                </value>
                <value>
                    <fullName>Concrete</fullName>
                </value>
                <value>
                    <fullName>Landscape</fullName>
                </value>
                <value>
                    <fullName>Garage</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Site_Visibility__c</fullName>
        <label>Site Visibility</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Impossible</fullName>
                </value>
                <value>
                    <fullName>2 -</fullName>
                </value>
                <value>
                    <fullName>3 -</fullName>
                </value>
                <value>
                    <fullName>4 -</fullName>
                </value>
                <value>
                    <fullName>5 - Shovel-ready</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Site_Website__c</fullName>
        <label>Site Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Size_SF__c</fullName>
        <label>Size (SF)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Specialty_Leasing_SL_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Specialty Leasing (SL) Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Construction Projects (Specialty Leasing (SL) Company)</relationshipLabel>
        <relationshipName>Construction_Projects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial Site Inspection</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Permitting</fullName>
                </value>
                <value>
                    <fullName>Pre-Construction Approval</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>On Hold - Muni Obstacles</fullName>
                </value>
                <value>
                    <fullName>On Hold - Property Ownership</fullName>
                </value>
                <value>
                    <fullName>OnHoldBizDevReview</fullName>
                    <label>On Hold - BizDev Review</label>
                </value>
                <value>
                    <fullName>Disqualified</fullName>
                </value>
                <value>
                    <fullName>Disqualified - CapEx</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Striping_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Striping Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Construction Projects (Striping Company)</relationshipLabel>
        <relationshipName>Construction_Projects4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Striping_Cost__c</fullName>
        <label>Striping Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Suggested_Type_of_Installation__c</fullName>
        <label>Suggested Type of Installation</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ground Mounted</fullName>
                </value>
                <value>
                    <fullName>Wall Mounted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suggested_number_of_Installations__c</fullName>
        <label>Suggested # of Installations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Price_of_Installation__c</fullName>
        <description>This field adds the Engineering Cost, Final Install Cost, Striping Cost, Permit Cost &amp; Additional Install Cost</description>
        <formula>(Engineering_Cost__c + Striping_Cost__c +  Permit_Cost__c  + Additional_Install_Cost__c + Final_Install_Cost__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field adds the Engineering Cost, Final Install Cost, Striping Cost, Permit Cost &amp; Additional Install Cost</inlineHelpText>
        <label>Total Price of Installation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Qualification_Score__c</fullName>
        <label>Total Qualification Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trophy_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trophy Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>URL_to_Ele_Info__c</fullName>
        <label>URL to Ele. Info</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>URL_to_Other_Info__c</fullName>
        <label>URL to Other Info</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>URL_to_Sign_Info__c</fullName>
        <label>URL to Sign. Info</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Vertical__c</fullName>
        <label>Vertical</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Municipal</fullName>
                </value>
                <value>
                    <fullName>Hospital</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visitors_Month__c</fullName>
        <label>Visitors/Month</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2_Hour_Signage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does this site have 2 hour signage installed?
If yes, click the box
We must have signage up before we can tow.</description>
        <inlineHelpText>Does this site have 2 hour signage installed?
If yes, click the box
We must have signage up before we can tow.</inlineHelpText>
        <label>2 Hour Signage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_ADA_Pedestals__c</fullName>
        <description># of Non-Revenue Generating ADA Chargers</description>
        <inlineHelpText># of Non-Revenue Generating ADA Chargers</inlineHelpText>
        <label># of Non-RevGen</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Digital_Only_Kiosks__c</fullName>
        <description># of Stations that are Dual digital. Any static/digital combo is a hybrid</description>
        <inlineHelpText># of Stations that are Dual digital. Any static/digital combo is a hybrid</inlineHelpText>
        <label># of (Dual Digital) Stations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Dual_Charger_Stations__c</fullName>
        <label># of (Dual Charger) Stations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Hybrid_Kiosks__c</fullName>
        <description>Number of Kiosks with both a static and digital face</description>
        <inlineHelpText>Number of Kiosks with both a static and digital face</inlineHelpText>
        <label># of (Hybrid) Stations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Other_EVSE_On_site__c</fullName>
        <label># of (Other) EVSE On-site</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Static_Kiosks__c</fullName>
        <label># of (Static) Stations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Stores__c</fullName>
        <label># of Stores</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Total_Kiosks__c</fullName>
        <label># of Total Stations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Total_Level_3_Stations__c</fullName>
        <label># of Total Level 3 Stations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Wall_Mounted_Kiosks__c</fullName>
        <label># of (Wall-Mounted) Stations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>weeks_Since_Opp_Close__c</fullName>
        <description>Does include on hold time.</description>
        <formula>(TODAY() - Opp_Close__c)/7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Does include on hold time.</inlineHelpText>
        <label>Weeks Since Opp Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Construction Project</label>
    <listViews>
        <fullName>AZ</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>Completion_Date__c</columns>
        <columns>Price_of_Installation__c</columns>
        <columns>Installer_Company_Name__c</columns>
        <columns>Sales_Rep__c</columns>
        <columns>Site_Address__c</columns>
        <columns>City__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>Primary_Account__c</columns>
        <columns>Biz_Dev_Opportunity__c</columns>
        <columns>Installer_Contact_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Opp_Network_Region__c</field>
            <operation>equals</operation>
            <value>,AZ</value>
        </filters>
        <label>AZ</label>
    </listViews>
    <listViews>
        <fullName>Active_DC</fullName>
        <columns>NAME</columns>
        <columns>Completion_Date__c</columns>
        <columns>Stage__c</columns>
        <columns>Price_of_Installation__c</columns>
        <columns>CapEx_Approved__c</columns>
        <columns>CapEx_Approval_Amount__c</columns>
        <columns>CapEx_Approval_Date__c</columns>
        <columns>CapEx_Approval_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Opp_Network_Region__c</field>
            <operation>equals</operation>
            <value>Washington DC</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>Active - DC</label>
    </listViews>
    <listViews>
        <fullName>Active_DC_Site_Details</fullName>
        <columns>NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>of_Total_Kiosks__c</columns>
        <columns>Stage__c</columns>
        <columns>Installer_Company_Name__c</columns>
        <columns>Price_of_Installation__c</columns>
        <columns>Completion_Date__c</columns>
        <columns>Confidence__c</columns>
        <columns>Primary_Account__c</columns>
        <columns>Site_Sales_Rep__c</columns>
        <columns>Biz_Dev_Opportunity__c</columns>
        <columns>Opp_City__c</columns>
        <columns>Opp_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Opp_Network_Region__c</field>
            <operation>equals</operation>
            <value>Washington DC</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>notEqual</operation>
            <value>Completed,Disqualified</value>
        </filters>
        <label>Active - DC Site Details</label>
    </listViews>
    <listViews>
        <fullName>Active_DC_Site_Details1</fullName>
        <columns>NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Opp_Site_A__c</columns>
        <columns>Opp_State__c</columns>
        <columns>Opp_City__c</columns>
        <columns>of_Total_Kiosks__c</columns>
        <columns>Installer_Company_Name__c</columns>
        <columns>Completion_Date__c</columns>
        <columns>Primary_Account__c</columns>
        <columns>Site_Sales_Rep__c</columns>
        <columns>Biz_Dev_Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Opp_Network_Region__c</field>
            <operation>equals</operation>
            <value>Washington DC</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>Active - DC Site Details</label>
    </listViews>
    <listViews>
        <fullName>Active_Portland</fullName>
        <columns>NAME</columns>
        <columns>Completion_Date__c</columns>
        <columns>Stage__c</columns>
        <columns>Network_Region__c</columns>
        <columns>Primary_Account__c</columns>
        <columns>of_Total_Kiosks__c</columns>
        <columns>Final_Inspection_Date__c</columns>
        <columns>AHJ_Account__c</columns>
        <columns>Total_Price_of_Installation__c</columns>
        <columns>Biz_Dev_Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Opp_Network_Region__c</field>
            <operation>equals</operation>
            <value>Portland</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>Active - Portland</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Phase__c</columns>
        <columns>Biz_Dev_Opportunity__c</columns>
        <columns>Primary_Account__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Property_No__c</columns>
        <columns>Network_Region__c</columns>
        <columns>Opp_Network_Region__c</columns>
        <columns>of_Total_Kiosks__c</columns>
        <columns>Site_Address__c</columns>
        <columns>Stage__c</columns>
        <columns>Completion_Date__c</columns>
        <columns>Price_of_Installation__c</columns>
        <columns>AHJ_Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Chicago_Projects</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>of_Total_Kiosks__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Stage__c</columns>
        <columns>Installer_Company_Name__c</columns>
        <columns>Price_of_Installation__c</columns>
        <columns>Completion_Date__c</columns>
        <columns>Confidence__c</columns>
        <columns>Primary_Account__c</columns>
        <columns>Site_Sales_Rep__c</columns>
        <columns>Biz_Dev_Opportunity__c</columns>
        <columns>Opp_City__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Opp_Network_Region__c</field>
            <operation>equals</operation>
            <value>Chicago</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>notEqual</operation>
            <value>Disqualified,Completed</value>
        </filters>
        <label>Chicago projects</label>
    </listViews>
    <listViews>
        <fullName>Chicago_Projects_Completed</fullName>
        <columns>NAME</columns>
        <columns>Opp_State__c</columns>
        <columns>Completion_Date__c</columns>
        <columns>of_Total_Kiosks__c</columns>
        <columns>of_Digital_Only_Kiosks__c</columns>
        <columns>of_Hybrid_Kiosks__c</columns>
        <columns>of_Static_Kiosks__c</columns>
        <columns>of_Wall_Mounted_Kiosks__c</columns>
        <columns>of_ADA_Pedestals__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Network_Region__c</field>
            <operation>equals</operation>
            <value>HI</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>Completed Projects - Station Counts</label>
    </listViews>
    <listViews>
        <fullName>Chicagoland_Network</fullName>
        <columns>NAME</columns>
        <columns>Completion_Date__c</columns>
        <columns>Stage__c</columns>
        <columns>Network_Region__c</columns>
        <columns>Installer_Contact_Name__c</columns>
        <columns>Price_of_Installation__c</columns>
        <columns>Site_Sales_Rep__c</columns>
        <columns>of_Total_Kiosks__c</columns>
        <columns>of_Hybrid_Kiosks__c</columns>
        <columns>of_ADA_Pedestals__c</columns>
        <columns>of_Wall_Mounted_Kiosks__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Network_Region__c</field>
            <operation>contains</operation>
            <value>Chicago</value>
        </filters>
        <label>Chicagoland Network</label>
    </listViews>
    <listViews>
        <fullName>Chuck_s_Active</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>Completion_Date__c</columns>
        <columns>Price_of_Installation__c</columns>
        <columns>Installer_Company_Name__c</columns>
        <columns>Sales_Rep__c</columns>
        <columns>Site_Address__c</columns>
        <columns>City__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>Primary_Account__c</columns>
        <columns>Biz_Dev_Opportunity__c</columns>
        <columns>Installer_Contact_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Network_Region__c</field>
            <operation>equals</operation>
            <value>LA,Santa Barbara,Orange County,San Diego,AZ,Texas</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>notContain</operation>
            <value>Completed,On Hold - Muni Obstacles,On Hold - Property Ownership,On Hold - Biz</value>
        </filters>
        <label>Chuck&apos;s Active</label>
    </listViews>
    <listViews>
        <fullName>Chuck_s_All</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>Completion_Date__c</columns>
        <columns>Price_of_Installation__c</columns>
        <columns>Installer_Company_Name__c</columns>
        <columns>Sales_Rep__c</columns>
        <columns>Site_Address__c</columns>
        <columns>City__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>Primary_Account__c</columns>
        <columns>Biz_Dev_Opportunity__c</columns>
        <columns>Installer_Contact_Name__c</columns>
        <columns>of_Total_Kiosks__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>chuck</value>
        </filters>
        <label>Chuck&apos;s All</label>
    </listViews>
    <listViews>
        <fullName>Chuck_s_Projects</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Completion_Date__c</columns>
        <columns>Network_No__c</columns>
        <columns>Opp_City__c</columns>
        <columns>Opp_Network_Region__c</columns>
        <columns>Opp_Site_A__c</columns>
        <columns>Opp_State__c</columns>
        <columns>Opp_Zip_Code__c</columns>
        <columns>Engineering_Cost__c</columns>
        <columns>Total_Price_of_Installation__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Network_Region__c</field>
            <operation>equals</operation>
            <value>LA,Santa Barbara,Orange County,San Diego,AZ</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>notContain</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>notContain</operation>
            <value>Disqualified</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>notContain</operation>
            <value>BizDev Review</value>
        </filters>
        <label>SoCal Active Projects</label>
    </listViews>
    <listViews>
        <fullName>Completed_CPs_without_Cost_Info</fullName>
        <booleanFilter>(1 OR 2 OR 3 OR 4 OR 5) AND 6</booleanFilter>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>Opp_Network_Region__c</columns>
        <columns>Completion_Date__c</columns>
        <columns>Total_Price_of_Installation__c</columns>
        <columns>Engineering_Cost__c</columns>
        <columns>Permit_Cost__c</columns>
        <columns>Final_Install_Cost__c</columns>
        <columns>Striping_Cost__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Total_Price_of_Installation__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Engineering_Cost__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Permit_Cost__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Final_Install_Cost__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Striping_Cost__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>Completed CPs without Cost Info</label>
    </listViews>
</CustomObject>